--- a/cfsi_leaflet.Rmd
+++ b/cfsi_leaflet.Rmd
@@ -3,10 +3,7 @@ title: "CFSI Map"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
-
+Libraries
 ```{r}
 library(leaflet)
 library(rgdal)
@@ -20,6 +17,12 @@ Reading in Census Base Layers
 ```{r}
 cfsi_census <- readOGR(dsn = "cfsi_shapefiles/shapefiles/Selected_Tract_Variables.shp", layer = "Selected_Tract_Variables",
                  GDAL1_integer64_policy = TRUE)
+
+per_cap_df <- read_csv("ACS_16_5YR_B19301_PER_CAPITA_INCOME.csv") %>%
+  mutate(HD01_VD01 = as.numeric(HD01_VD01))
+
+cfsi_census@data <- cfsi_census@data %>% 
+  left_join(per_cap_df, by = c("GEOID10" = "GEOid2"))
 ```
 
 Cutting out Washington County
@@ -48,12 +51,12 @@ cfsi_census@data$l_line2 <- paste(cfsi_census@data$CNTY_name, "County")
 
 cfsi_census@data$l_line3_pov <- paste("Poverty: ", round(cfsi_census@data$Pct_In_Pov, 0), "%", sep = "")
 cfsi_census@data$l_line3_unemp <- paste("Unemployment: ", round(cfsi_census@data$PCT_unempl, 0), "%", sep = "")
-cfsi_census@data$l_line3_inc <- paste("Median Household Income: ", "$", round(cfsi_census@data$Median_HH, 0), sep = "")
+cfsi_census@data$l_line3_inc <- paste("Median Household Income: ", "$", scales::comma(round(cfsi_census@data$Median_HH, 0)), sep = "")
 cfsi_census@data$l_line3_educ <- paste("Bachelor's Degree or Higher: ", round(cfsi_census@data$PCT_BA_or, 0), "%", sep = "")
 cfsi_census@data$l_line3_hs <- paste("At least High School or GED: ", round(cfsi_census@data$hs, 0), "%", sep = "")
 cfsi_census@data$l_line3_assoc <- paste("Associate's Degree or Higher: ", round(cfsi_census@data$assoc, 0), "%", sep = "")
 cfsi_census@data$l_line3_dense <- paste("Population per square mile: ", round(cfsi_census@data$pop_per_MI, 0), sep = "")
-
+cfsi_census@data$l_line3_per_cap <- paste("Per Capita Income: $", scales::comma(cfsi_census@data$HD01_VD01), sep = "")
 
 labels_pov <- sprintf(
   "%s<br/>%s<br/>%s",
@@ -88,6 +91,11 @@ labels_hs <- sprintf(
 labels_assoc <- sprintf(
   "%s<br/>%s<br/>%s",
   cfsi_census@data$l_line1, cfsi_census@data$l_line2, cfsi_census@data$l_line3_assoc
+) %>% lapply(htmltools::HTML)
+
+labels_per_cap <- sprintf(
+  "%s<br/>%s<br/>%s",
+  cfsi_census@data$l_line1, cfsi_census@data$l_line2, cfsi_census@data$l_line3_per_cap
 ) %>% lapply(htmltools::HTML)
 
 ```
@@ -130,6 +138,11 @@ pal_assoc <- colorNumeric(
   palette = pal,
   domain = cfsi_census@data$assoc
 )
+
+pal_per_cap <- colorNumeric(
+  palette = pal,
+  domain = cfsi_census@data$HD01_VD01
+)
 ```
 
 UPDATED OVERLAY LAYERS
@@ -160,9 +173,13 @@ mh_df <- subset(cfsi_samhsa, type_facil == "MH")
 cfsi_alc <- cfsi_alc[1:12, ] #rows 11 to 16 are full of NAs and zeros
 cfsi_alc <- cfsi_alc[cfsi_alc$County == "Clark" | cfsi_alc$County == "Floyd", ]
 
+cfsi_food_pantry <- cfsi_food_pantry %>%
+  mutate(Latitude = as.numeric(Latitude),
+         Longitude = as.numeric(Longitude))
+
 fp_df <- cfsi_food_pantry %>%
   filter(`Food Bank or Hot Meal` %in% c("FP", "HM-FP"))
-fh_df <- cfsi_food_pantry %>%
+hm_df <- cfsi_food_pantry %>%
   filter(`Food Bank or Hot Meal` %in% c("HM", "HM-FP"))
 
 fp_df <- fp_df %>% 
@@ -371,6 +388,14 @@ map1 <- leaflet(cfsi_census) %>%
                 style = list("font-weight" = "normal", padding = "3px 8px"),
                 textsize = "24px",
                 direction = "auto"))%>%
+  addPolygons(group = "Per Capita Income", color = "#444444", weight = 1, smoothFactor = 0.5,
+              opacity = 0.5, fillOpacity = 0.5,
+              fillColor = ~pal_per_cap(HD01_VD01),
+              label = labels_per_cap,
+              labelOptions = labelOptions(
+                style = list("font-weight" = "normal", padding = "3px 8px"),
+                textsize = "24px",
+                direction = "auto"))%>%
  addLabelOnlyMarkers(data = places_lat_long, lat = ~Latitude, lng = ~Longitude, label = ~html_label,
                       labelOptions = labelOptions(noHide = T, direction = 'top', textOnly = T), group = "Place Names") %>%
   addPolylines(data = cfsi_tarc, color = "black", weight = 2, group = "TARC Routes") %>%
@@ -392,7 +417,7 @@ map1 <- leaflet(cfsi_census) %>%
                    popupOptions = popupOptions(direction = "auto")) %>%
   addLayersControl(
     overlayGroups = c("Adult Learning Centers", "Substance Abuse Facilities", "Mental Health Centers", "EBT Location", "EBT Location w/ Fresh Produce", "TARC Routes", "Place Names", "Food Pantry", "Hot Meal"),
-    baseGroups = c("Poverty", "Median Household Income", "Unemployment", "High School or GED", "Associate's Degree", "Bachelor's Degree", "Population Density"),
+    baseGroups = c("Poverty", "Median Household Income", "Unemployment", "High School or GED", "Associate's Degree", "Bachelor's Degree", "Population Density", "Per Capita Income"),
     options = layersControlOptions(collapsed = FALSE))%>%
     hideGroup(c("Substance Abuse Facilities","Mental Health Centers", "Adult Learning Centers", "EBT Location", "EBT Location w/ Fresh Produce", "Food Pantry", "Hot Meal"))%>%
     htmlwidgets::onRender("
