--- a/cfsi_leaflet.Rmd
+++ b/cfsi_leaflet.Rmd
@@ -40,7 +40,6 @@ Reconfiguring base data
 ```{r}
 cfsi_census@data$hs <- cfsi_census@data$PCT_HS_GED+cfsi_census@data$PCT_Some_C+cfsi_census@data$PCT_BA_or
 cfsi_census@data$assoc <- cfsi_census@data$PCT_Associ+cfsi_census@data$PCT_BA_or
-
 ```
 
 
@@ -153,6 +152,9 @@ cfsi_samhsa <- readxl::read_excel("CFSI_Mapping_File.xlsx", sheet = "SAMHSA Sele
 cfsi_alc <- readxl::read_excel("CFSI_Mapping_File.xlsx", sheet = "IN DWD Adult Education Centers")
 cfsi_food_pantry <- readxl::read_excel("CFSI_Mapping_File.xlsx", sheet = "Food Pantry and Hotmeal Service")
 
+libraries <- read_csv("geocoded_libraries_hand_added.csv")
+childcare <- read_csv("childcare.csv")
+
 #unchanged
 cfsi_designated_places <- readOGR(dsn = "cfsi_shapefiles/shapefiles/converted_census_designated_places.shp", layer = "converted_census_designated_places",
                  GDAL1_integer64_policy = TRUE)
@@ -236,6 +238,17 @@ alc_l_3 <- paste(cfsi_alc$City, "IN", cfsi_alc$ZIP)
 alc_l_4 <- paste("Phone:", cfsi_alc$Phone)
 alc_l_5 <- paste("Hours:", cfsi_alc$`Hours of Operation`)
 
+lib_l_1 <- libraries$`Branch Name`
+lib_l_2 <- libraries$Address
+lib_l_3 <- paste(libraries$City, ",", libraries$Zip)
+
+cc_l_1 <- childcare$`Business Name`
+cc_l_2 <- childcare$`Address Line`
+cc_l_3 <- paste(childcare$City, ",", childcare$Zip)
+cc_l_4 <- childcare$`License Type`
+cc_l_5 <- childcare$Programming
+
+
 fp_label <- sprintf(
   "<style> div.leaflet-popup-content {font-size:24px;}</style><strong/>%s</strong><br/><strong/>%s</strong><br/>%s<br/>%s",
   fp_l_1, fp_l_2, fp_l_3, fp_l_4
@@ -269,6 +282,16 @@ mh_label <- sprintf(
 alc_label <- sprintf(
   "<style> div.leaflet-popup-content {font-size:24px;}</style><strong/>%s</strong><br/><strong/>%s</strong><br/><strong/>%s</strong><br/>%s<br/>%s",
   alc_l_1, alc_l_2, alc_l_3, alc_l_4, alc_l_5
+) %>% lapply(htmltools::HTML)
+
+lib_label <- sprintf(
+  "<style> div.leaflet-popup-content {font-size:24px;}</style><strong/>%s</strong><br/>%s<br/>%s",
+  lib_l_1, lib_l_2, lib_l_3
+) %>% lapply(htmltools::HTML)
+
+cc_label <- sprintf(
+  "<style> div.leaflet-popup-content {font-size:24px;}</style><strong/>%s</strong><br/><strong/>%s</strong><br/><strong/>%s</strong><br/>%s<br/>%s",
+  cc_l_1, cc_l_2, cc_l_3, cc_l_4, cc_l_5
 ) %>% lapply(htmltools::HTML)
 
 ```
@@ -324,6 +347,16 @@ fp_icon <- makeIcon(
 
 hm_icon <- makeIcon(
   "hm_icon.png",
+  iconWidth = 20, iconHeight = 20
+)
+
+child_icon <- makeIcon(
+  "child_icon.svg",
+  iconWidth = 20, iconHeight = 20
+)
+
+library_icon <- makeIcon(
+  "book_icon.png",
   iconWidth = 20, iconHeight = 20
 )
 ```
@@ -415,11 +448,17 @@ map1 <- leaflet(cfsi_census) %>%
   addMarkers(data = hm_df, lat = ~Latitude, lng = ~Longitude, popup = ~hm_label, icon = hm_icon, 
                    group = "Hot Meal",
                    popupOptions = popupOptions(direction = "auto")) %>%
+  addMarkers(data = childcare, lat = ~Latitude, lng = ~Longitude, popup = ~cc_label, icon = child_icon, 
+                   group = "Childcare",
+                   popupOptions = popupOptions(direction = "auto")) %>%
+  addMarkers(data = libraries, lat = ~latitude, lng = ~longitude, popup = ~lib_label, icon = library_icon,
+                   group = "Libraries",
+                   popupOptions = popupOptions(direction = "auto")) %>%
   addLayersControl(
-    overlayGroups = c("Adult Learning Centers", "Substance Abuse Facilities", "Mental Health Centers", "EBT Location", "EBT Location w/ Fresh Produce", "TARC Routes", "Place Names", "Food Pantry", "Hot Meal"),
+    overlayGroups = c("Adult Learning Centers", "Substance Abuse Facilities", "Mental Health Centers", "EBT Location", "EBT Location w/ Fresh Produce", "TARC Routes", "Place Names", "Food Pantry", "Hot Meal", "Childcare", "Libraries"),
     baseGroups = c("Poverty", "Median Household Income", "Unemployment", "High School or GED", "Associate's Degree", "Bachelor's Degree", "Population Density", "Per Capita Income"),
     options = layersControlOptions(collapsed = FALSE))%>%
-    hideGroup(c("Substance Abuse Facilities","Mental Health Centers", "Adult Learning Centers", "EBT Location", "EBT Location w/ Fresh Produce", "Food Pantry", "Hot Meal"))%>%
+    hideGroup(c("Substance Abuse Facilities","Mental Health Centers", "Adult Learning Centers", "EBT Location", "EBT Location w/ Fresh Produce", "Food Pantry", "Hot Meal", "Childcare", "Libraries"))%>%
     htmlwidgets::onRender("
     function(el, x) {
       this.on('baselayerchange', function(e) {
